--- a/MyFace/Views/Shared/_Layout.cshtml
+++ b/MyFace/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
       <div id="myLinks">          
           <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="PostsPage">Homepage</a>
           <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="CreatePostPage">Post</a>
-          <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="UsersPage">Users</a>
+          <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="CreateUserPage">Users</a>
           <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
       </div>
       <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
