Change userPage styling

--- a/MyFace/Views/Users/UserPage.cshtml
+++ b/MyFace/Views/Users/UserPage.cshtml
@@ -19,22 +19,22 @@
         {
             <li class="list-of-posts">
                 <div class="post-user">
-                    <p class="display-name">Display name: @post.PostedBy.DisplayName, Username: @post.PostedBy.Username</p>
-                    <img class="profile-picture" height="100" width="100" src="@post.PostedBy.ProfileImageUrl" alt="broken Profile pic :(">
+                    <div class="post-user-info">
+                        <p class="display-name">@post.PostedBy.DisplayName</p>
+                        <p class="post-time">@post.PostedAt</p>
+                    </div>
+                    <img class="profile-picture" src="@post.PostedBy.ProfileImageUrl" alt="broken Profile pic :(">
                 </div>
                        
                 <div class="post-message">
-                    <p class="post-message">Message: @post.Message</p>
-                    <img class="post-image" height="200" width="200" src="@post.ImageUrl" alt="broken post pic :(">
+                    <p class="post-message">@post.Message</p>
+                    <img class="post-image" src="@post.ImageUrl" alt="broken post pic :(">
                 </div>
                         
                 <div class="post-data">
-                    <p class="post-time">Posted at: @post.PostedAt</p>
-                    @* <p class="post-likes">Likes: @getLikes(post.LikedBy)</p> *@
-                    <p class="post-dislikes">Disikes: placeholder/p>
+                    <p class="post-likes">&#x1F44D @post.LikedBy.Count()</p>
+                    <p class="post-dislikes">&#x1F44E @post.DislikedBy.Count()</p>
                 </div>
-                        
-                <hr>
             </li>
         }
     </ul>
