Add stop create post link from working via js

--- a/MyFace/Views/Shared/_Layout.cshtml
+++ b/MyFace/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
       <!-- Navigation links (hidden by default) -->
       <div id="myLinks">          
           <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="PostsPage">Homepage</a>
-          <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="CreatePostPage">Post</a>
+          <a class="nav-link text-dark" id="create-post-link" asp-area="" asp-controller="Posts" asp-action="CreatePostPage">Post</a>
           <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="UsersPage">Users</a>
           <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
       </div>
