--- a/MyFace/Views/Shared/_Layout.cshtml
+++ b/MyFace/Views/Shared/_Layout.cshtml
@@ -25,6 +25,17 @@
       </a>
     </div>
 </header>
+<button data-modal-target="#modal">Open Modal</button>
+  <div class="modal" id="modal">
+    <div class="modal-header">
+      <div class="title">Example Modal</div>
+      <button data-close-button class="close-button">&times;</button>
+    </div>
+    <div class="modal-body">
+     test
+    </div>
+  </div>
+  <div id="overlay"></div>
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
